# waifu-wallet

./: .coderabbit.yaml  .gitignore  CONTRIBUTING.md  LICENSE  README.md  setup.bat  start.bat  update.bat
.github/: dependabot.yml
.github/workflows/: ci.yml  gemini-review.yml
backend/: database.py  main.py  models.py  pyproject.toml  schemas.py  seed.py
backend/routers/: calendar.py  credit_cards.py  debts.py  fixed_expenses.py  forecast.py  gacha.py  notes.py  salary_plans.py  savings.py  settings.py  summary.py  transactions.py  upload.py
backend/tests/: conftest.py  test_calendar.py  test_calendar_i18n.py  test_credit_cards.py  test_debts.py  test_fixed_expenses.py  test_forecast.py  test_gacha.py  test_health.py  test_notes.py  test_salary_plans.py  test_settings.py  test_settings_i18n.py  test_summary.py  test_transactions.py  test_upload.py
frontend/: .prettierrc  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: ImageCropUpload.tsx  Layout.tsx  Sidebar.tsx  TimelineRoadmap.tsx
frontend/src/hooks/: useApi.ts  useLocale.tsx  useTheme.tsx
frontend/src/lib/: decode.ts  i18n.ts
frontend/src/locales/: en.json  es.json  pt-BR.json
frontend/src/pages/: Calendar.tsx  CreditCards.tsx  Dashboard.tsx  Debts.tsx  FixedExpenses.tsx  Forecast.tsx  Gacha.tsx  Notes.tsx  SalaryPlans.tsx  Savings.tsx  Settings.tsx  Transactions.tsx
frontend/src/test/: setup.ts
frontend/src/types/: index.ts
frontend/src/utils/: currency.ts  date.ts  (+2 more)
(+20 files in other folders)
